--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
 ## Unity ##
-
 *.cs diff=csharp text
 *.cginc text
 *.shader text
@@ -46,6 +45,7 @@
 *.rns filter=lfs diff=lfs merge=lfs -text
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
+*.example filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
 *.gitkeep filter=lfs diff=lfs merge=lfs -text
